페ì¹패치 조인을 사용한 member 데이터 불러오기, stream을 사용한 list 처리